force-app/main/default/objects/CTP_FeedbackTypeSubType__c/CTP_FeedbackTypeSubType__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to store feedback type and feedback sub type</description>
    <label>FeedbackTypeSubTypeMapping</label>
</CustomObject>