force-app/main/default/objects/CTP_FeedbackTypeSubType__c/fields/CTP_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>CTP_Case_Type__c</fullName>
    <description>Field to store the case type</description>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>