force-app/main/default/objects/CTP_FeedbackTypeSubType__c/fields/CTP_Feedback_SubType__c.field-meta.xml
<CustomField>
    <fullName>CTP_Feedback_SubType__c</fullName>
    <description>Field to store feedbackSubType for Custom Setting</description>
    <label>Feedback SubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>