force-app/main/default/objects/CTP_FeedbackTypeSubType__c/fields/CTP_Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>CTP_Feedback_Type__c</fullName>
    <description>Field to store feedback type for custom setting</description>
    <label>Feedback Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>